force-app/main/default/objects/Daily_Status__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Project</fullName>
            </value>
            <value>
                <fullName>Service Project</fullName>
            </value>
            <value>
                <fullName>Support Project</fullName>
            </value>
            <value>
                <fullName>Sales Project</fullName>
            </value>
            <value>
                <fullName>Technical Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>