force-app/main/default/objects/Daily_Status__c/fields/Task_Done__c.field-meta.xml
<CustomField>
    <fullName>Task_Done__c</fullName>
    <label>Task Done</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>